<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="TrafficLight" Id="{b2bebb51-35a9-442b-b4e0-7139834a58b1}">
    <Declaration><![CDATA[TYPE TrafficLight :
STRUCT
	Red		AT %Q*:BOOL; 
	Amber	AT %Q*:BOOL;
	Green	AT %Q*:BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>